agregado enlace al CV

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <title>Portafolio</title>
 </head>
 <body>
+    <div class="overlayPdf">
+        <div class="contPdf">
+            <embed src="assets/docs/173906-raul-enrique-donoso-jara-1.pdf" type="application/pdf" width="100%" height="600px" />
+        </div>
+    </div>
     <div id="fondo">
         <div id="div1">
             <div id="contPres">
@@ -20,7 +25,7 @@
                 </div>
                 <div id="cuerpoPresent">
                     Cuerpo de la presentación
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda saepe magni dolore rerum, ipsam corrupti hic culpa similique possimus. Odio vel unde vero, ut consequuntur aut maxime minus excepturi facere nihil dolorem, officiis recusandae sapiente expedita ab, repudiandae quos autem explicabo consequatur. Magnam nostrum porro deleniti id pariatur architecto quo molestiae maxime earum ullam cumque assumenda beatae laborum, ipsa natus dolore fuga odio aliquam. Laudantium.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. <p id="activadorPdf">Enlace al CV</p> Assumenda saepe magni dolore rerum, ipsam corrupti hic culpa similique possimus. Odio vel unde vero, ut consequuntur aut maxime minus excepturi facere nihil dolorem, officiis recusandae sapiente expedita ab, repudiandae quos autem explicabo consequatur. Magnam nostrum porro deleniti id pariatur architecto quo molestiae maxime earum ullam cumque assumenda beatae laborum, ipsa natus dolore fuga odio aliquam. Laudantium.
                 </div>
                 <div id="piePresent">
                     Pie de la presentación
