Agregado contenido faltante de presentación y textos de tarjetas.- Correcciones menores de responsividad

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ae38c96592.js" crossorigin="anonymous"></script>
     <title>Portafolio</title>
 </head>
 <body>
@@ -21,14 +22,26 @@
         <div id="div1">
             <div id="contPres">
                 <div id="presentacion">
-                    Encabezado de la presentación
+                    Raúl Donoso Jara
                 </div>
                 <div id="cuerpoPresent">
-                    Cuerpo de la presentación
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. <p id="activadorPdf">Enlace al CV</p> Assumenda saepe magni dolore rerum, ipsam corrupti hic culpa similique possimus. Odio vel unde vero, ut consequuntur aut maxime minus excepturi facere nihil dolorem, officiis recusandae sapiente expedita ab, repudiandae quos autem explicabo consequatur. Magnam nostrum porro deleniti id pariatur architecto quo molestiae maxime earum ullam cumque assumenda beatae laborum, ipsa natus dolore fuga odio aliquam. Laudantium.
+                    Estudiante en bootcamp de Edutecno para ser Desarrollador full-stack de Python.
+                        Tengo experiencia laboral como técnico electrónico y asistente en el rubro automotriz (puedes ver mi CV <p id="activadorPdf">aquí</p>).
                 </div>
                 <div id="piePresent">
-                    Pie de la presentación
+                    Contacto:
+                    <div id="e-mail">
+                        <i class="fa-regular fa-envelope" style="color: #ece5d8;"> <a>rauld08@hotmail.com</a></i>
+                    </div>
+                    <div id="whatsapp">
+                        <i class="fa-brands fa-whatsapp" style="color: #ece5d8;"> <a>+569 44981331</a></i>
+                    </div>
+                    <div id="github">
+                        <i class="fa-brands fa-github" style="color: #ece5d8;"> <a href="https://github.com/RaulD08" target="_blank">Mi perfil de GitHub</a></i> 
+                    </div>
+                    <div id="linkedin">
+                        <i class="fa-brands fa-linkedin" style="color: #ece5d8;"> <a href="https://www.linkedin.com/in/ra%C3%BAl-donoso-jara-a48213241" target="_blank">Mi perfil de LinkedIn</a></i>
+                    </div>
                 </div>
             </div>
         </div>
@@ -39,9 +52,9 @@
                     <div class="tarjeta">
                         <img src="assets/img/digimon.png" class="imgTarjeta" alt="digimon">
                         <div class="cuerpoTarjeta">
-                            <h5 class="tituloTarjeta">M2PC</h5>
-                            <p class="textoTarjeta">Some text on the card.</p>
-                            <a href="https://rauld08.github.io/Drilling_final_m2/" target="_blank" class="btnTarjeta">Link</a>
+                            <h5 class="tituloTarjeta">Drilling final Módulo 2</h5>
+                            <p class="textoTarjeta">Visualización de información consumida desde API Digimon.</p>
+                            <a href="https://rauld08.github.io/Drilling_final_m2/" target="_blank" class="btnTarjeta">Ver el proyecto</a>
                         </div>
                     </div>
                 </div>
@@ -49,9 +62,9 @@
                     <div class="tarjeta">
                         <img src="assets/img/colores_responsivo.png" class="imgTarjeta" alt="">
                         <div class="cuerpoTarjeta">
-                            <h5 class="tituloTarjeta">Ec. M2S4</h5>
-                            <p class="textoTarjeta">Some text on the card.</p>
-                            <a href="https://rauld08.github.io/ejercicio_m2s4/" target="_blank" class="btnTarjeta">Link</a>
+                            <h5 class="tituloTarjeta">Ejercicio Módulo 2 - Sesión 4</h5>
+                            <p class="textoTarjeta">Práctica de diseño responsivo.</p>
+                            <a href="https://rauld08.github.io/ejercicio_m2s4/" target="_blank" class="btnTarjeta">Ver el proyecto</a>
                         </div>
                     </div>
                 </div>
@@ -59,9 +72,9 @@
                     <div class="tarjeta">
                         <img src="assets/img/calculos_js.png" class="imgTarjeta" alt="">
                         <div class="cuerpoTarjeta">
-                            <h5 class="tituloTarjeta">Drilling M2S8</h5>
-                            <p class="textoTarjeta">Some text on the card.</p>
-                            <a href="https://rauld08.github.io/DM2S8/" target="_blank" class="btnTarjeta">Link</a>
+                            <h5 class="tituloTarjeta">Drilling Módulo 2 - Sesión 8</h5>
+                            <p class="textoTarjeta">Simulación de menú para cliente bancario (c0012 - 112233).</p>
+                            <a href="https://rauld08.github.io/DM2S8/" target="_blank" class="btnTarjeta">Ver el proyecto</a>
                         </div>
                     </div>
                 </div>
@@ -69,9 +82,9 @@
                     <div class="tarjeta">
                         <img src="assets/img/dom_jquery.png" class="imgTarjeta" alt="">
                         <div class="cuerpoTarjeta">
-                            <h5 class="tituloTarjeta">Ec. M2S10</h5>
-                            <p class="textoTarjeta">Some text on the card.</p>
-                            <a href="https://rauld08.github.io/EcM2S10/" target="_blank" class="btnTarjeta">Link</a>
+                            <h5 class="tituloTarjeta">Ejercicio Módulo 2 - Sesión 10</h5>
+                            <p class="textoTarjeta">Funciones básicas para estilos con jQuery.</p>
+                            <a href="https://rauld08.github.io/EcM2S10/" target="_blank" class="btnTarjeta">Ver el proyecto</a>
                         </div>
                     </div>
                 </div>
@@ -79,9 +92,9 @@
                     <div class="tarjeta">
                         <img src="assets/img/tarjeta_api.png" class="imgTarjeta" alt="">
                         <div class="cuerpoTarjeta">
-                            <h5 class="tituloTarjeta">Drilling M2S11</h5>
-                            <p class="textoTarjeta">Some text on the card.</p>
-                            <a href="https://rauld08.github.io/DM2S11/" target="_blank" class="btnTarjeta">Link</a>
+                            <h5 class="tituloTarjeta">Drilling Módulo 2 - Sesión 11</h5>
+                            <p class="textoTarjeta">Tarjeta con información consumida desde API.</p>
+                            <a href="https://rauld08.github.io/DM2S11/" target="_blank" class="btnTarjeta">Ver el proyecto</a>
                         </div>
                     </div>
                 </div>
@@ -89,9 +102,9 @@
                     <div class="tarjeta">
                         <img src="assets/img/nimrodel.png" class="imgTarjeta" alt="">
                         <div class="cuerpoTarjeta">
-                            <h5 class="tituloTarjeta">Drilling M2S12</h5>
-                            <p class="textoTarjeta">Some text on the card.</p>
-                            <a href="https://rauld08.github.io/DM2S12/" target="_blank" class="btnTarjeta">Link</a>
+                            <h5 class="tituloTarjeta">Drilling Módulo 2 - Sesión 12</h5>
+                            <p class="textoTarjeta">Página web Nimrodel Pub Restaurant.</p>
+                            <a href="https://rauld08.github.io/DM2S12/" target="_blank" class="btnTarjeta">Ver el proyecto</a>
                         </div>
                     </div>
                 </div>
